# annotation-and-image-markup

./: CONTRIBUTING.rst  LICENSE.txt  NOTICE  README.md
AIMToolkit_v3.0.2_rv11/: README.txt
AIMToolkit_v3.0.2_rv11/doc/: AIM_v3_rv11_Model.xsd
AIMToolkit_v3.0.2_rv11/examples/: README_FIRST.txt
AIMToolkit_v4.0.0_rv44/: README.txt
AIMToolkit_v4.1.0_rv44/: README.txt
AIMToolkit_v4.1.0_rv44/doc/: AIM_v4_rv44_XML.xsd  (+1 more)
AIMToolkit_v4.1.0_rv44/source/: CMakeLists.txt
AIMToolkit_v4.1.0_rv44/source/AIMLib/: AIMToolkit.sln  building.txt  readme.txt
AIMToolkit_v4.1.0_rv44/source/AIMLib/AIMConverter/: AIMConverter.cpp  AIMConverter.h  AIMConverter.vcproj  CMakeLists.txt  ConverterUtil.cpp  ConverterUtil.h  stdafx.cpp  stdafx.h
AIMToolkit_v4.1.0_rv44/source/AIMLib/AIMLib/: AIMCodes.cpp  AIMCodes.h  AIMCommon.h  AIMLib.cpp  AIMLib.h  AIMLib.vcproj  AIMUtil.cpp  AIMUtil.h  AimEnum.cpp  AimEnum.h  AimHeaders.h  AimResultValidator.cpp  AimResultValidator.h  CMakeLists.txt  memdebug.h  stdafx.cpp  stdafx.h
AIMToolkit_v4.1.0_rv44/source/AIMLib/AIMLib/entity/: AdjudicationObservation.cpp  AdjudicationObservation.h  Algorithm.cpp  Algorithm.h  AnnotationCollection.cpp  AnnotationCollection.h  AnnotationEntity.cpp  AnnotationEntity.h  AnnotationOfAnnotation.cpp  AnnotationOfAnnotation.h  AnnotationOfAnnotationCollection.cpp  AnnotationOfAnnotationCollection.h  AnnotationRoleEntity.cpp  AnnotationRoleEntity.h  AuditTrail.cpp  AuditTrail.h  CalculationData.cpp  CalculationData.h  CalculationEntity.cpp  CalculationEntity.h  CalculationResult.cpp  CalculationResult.h  CharacteristicQuantification.cpp  CharacteristicQuantification.h  CompactCalculationResult.cpp  CompactCalculationResult.h  Coordinate.cpp  Coordinate.h  DicomImageReferenceEntity.cpp  DicomImageReferenceEntity.h  DicomSegmentationEntity.cpp  DicomSegmentationEntity.h  Dimension.cpp  Dimension.h  Entity.cpp  Entity.h  Equipment.cpp  Equipment.h  ExtendedCalculationResult.cpp  ExtendedCalculationResult.h  (+92 more)
AIMToolkit_v4.1.0_rv44/source/AIMLib/AIMLib/operations/: BaseModel.cpp  BaseModel.h  DcmModel.cpp  DcmModel.h  DcmModelInternal.h  DcmModelInternalRead.cpp  DcmModelInternalWrite.cpp  DicomTagCollection.cpp  DicomTagCollection.h  ModelValidator.cpp  ModelValidator.h  XmlModel.cpp  XmlModel.h  XmlModelInternal.h  XmlModelInternalRead.cpp  XmlModelInternalWrite.cpp
AIMToolkit_v4.1.0_rv44/source/AIMLib/AIMLib/statement/: AbstractAnnotationStatement.h  AnnotationOfAnnotationStatement.h  AnnotationStatement.h  AnnotationStatementRelationship.h  ImageAnnotationStatement.h  StatementFactory.cpp  StatementFactory.h
AIMToolkit_v4.1.0_rv44/source/AIMLib/AIMLib/util/: AimUidGenerator.cpp  AimUidGenerator.h  DateTime.cpp  DateTime.h
AIMToolkit_v4.1.0_rv44/source/AIMLib/AIMLibTest/: AIMLibTest.cpp  AIMLibTest.vcproj  CMakeLists.txt  stdafx.cpp  stdafx.h
AIMToolkit_v4.1.0_rv44/source/AIMLib/AIMXML/: AIMXML-typeinfo.cpp  AIMXML-typeinfo.h  AIMXML.cpp  AIMXML.h  AIMXML.vcproj  CMakeLists.txt  StdAfx.cpp  StdAfx.h  type_.CAIMXML.h  type_.CAdjudicationObservation.h  type_.CAimVersion.h  type_.CAlgorithm.h  type_.CAnnotationCollection.h  type_.CAnnotationEntity.h  type_.CAnnotationEntityHasPerformedTaskContextEntityStatement.h  type_.CAnnotationEntityHasPlannedTaskContextEntityStatement.h  type_.CAnnotationOfAnnotation.h  type_.CAnnotationOfAnnotationCollection.h  type_.CAnnotationOfAnnotationHasAnnotationOfAnnotationStatement.h  type_.CAnnotationOfAnnotationHasAnnotationRoleEntityStatement.h  type_.CAnnotationOfAnnotationHasCalculationEntityStatement.h  type_.CAnnotationOfAnnotationHasGeneralLesionObservationEntityStatement.h  type_.CAnnotationOfAnnotationHasImageAnnotationStatement.h  type_.CAnnotationOfAnnotationHasImagingObservationEntityStatement.h  type_.CAnnotationOfAnnotationHasImagingPhysicalEntityStatement.h  type_.CAnnotationOfAnnotationHasInferenceEntityStatement.h  type_.CAnnotationOfAnnotationHasTimePointLesionObservationEntityStatement.h  type_.CAnnotationOfAnnotationIsComparedWithAnnotationOfAnnotationStatement.h  type_.CAnnotationOfAnnotationIsComparedWithImageAnnotationStatement.h  type_.CAnnotationOfAnnotationStatement.h  type_.CAnnotationRoleEntity.h  type_.CAnnotationStatement.h  type_.CAuditTrail.h  type_.CCalculationData.h  type_.CCalculationEntity.h  type_.CCalculationEntityIsComparedWithCalculationEntityStatement.h  type_.CCalculationEntityReferencesCalculationEntityStatement.h  type_.CCalculationEntityUsesCalculationEntityStatement.h  type_.CCalculationResult.h  type_.CCalculationResultIdentifier.h  (+804 more)
AIMToolkit_v4.1.0_rv44/source/AIMLib/Altova/: Altova.h  Altova.vcproj  AltovaDefs.h  AltovaException.cpp  AltovaException.h  CMakeLists.txt  SchemaTypes.cpp  SchemaTypes.h  StdAfx.h  StructInfo.cpp  StructInfo.h  exception.h  xs-datetime.cpp  xs-datetime.h  xs-types.cpp  xs-types.h
AIMToolkit_v4.1.0_rv44/source/AIMLib/AltovaXML/: AltovaXML.vcproj  AltovaXMLAPI.h  CMakeLists.txt  Node.cpp  Node.h  StdAfx.h  XercesString.h  XmlException.cpp  XmlException.h
AIMToolkit_v4.1.0_rv44/source/AIMLib/CMake/: FindXerces.cmake  cmake_uninstall.cmake
AIMToolkit_v4.1.0_rv44/source/dcmtk-3.6.1_20121102/: VERSION
AIMToolkit_v4.1.0_rv44/source/dcmtk-3.6.1_20121102/dcmdata/include/dcmtk/dcmdata/: dcuid.h
AIMToolkit_v4.1.0_rv44/source/dcmtk-3.6.1_20121102/dcmsr/include/dcmtk/dcmsr/: dsrtypes.h
AIMToolkit_v4.1.0_rv44/source/dcmtk-3.6.1_20121102/dcmsr/libsrc/: CMakeLists.txt  Makefile.dep  Makefile.in  dsrdoc.cc  dsrsc3vl.cc  dsrtypes.cc
AIMToolkit_v4.1.0_rv44/source/dcmtk-3.6.1_20121102/doxygen/: htmldocs.cfg  manpages.cfg
AIMToolkit_v4.1.0_rv44/source/xercesc-3.1/: readme.txt
AIMToolkit_v4.1.0_rv44/source/xercesc-3.1/x64/lib/: xerces-c_3.lib
AIMToolkit_v4.1.0_rv44/source/xercesc-3.1/x86/lib/: xerces-c_3.lib
ATB_1.0_src/: pom.xml
ATB_1.1_src/: .project  pom.xml
ATS_1.0_src/: .project  build.xml  serverConfig.txt
ATS_1.1_src/: .classpath  .project  build.xml  readme.txt  serverConfig.txt
AimPlugin3.0.4/: AimPlugin 3.0.4.sln  copy_debug.bat  copy_release.bat  license.txt  readme.txt
AimPlugin4.5/: readme.txt
(+5666 files in other folders)
